--- a/TeamMeatProject/PorkPaint/styles/index.css
+++ b/TeamMeatProject/PorkPaint/styles/index.css
@@ -1,8 +1,10 @@
-﻿body {
+﻿body
+{
     padding-top: 5px;
-    background:url('/images/sandpaper.png');
+    background: url('/images/sandpaper.png');
 }
-#wrapper {
+#wrapper
+{
     width: 780px;
     margin: 0 auto;
     background: #EEE;
@@ -10,12 +12,14 @@
     border-radius: 8px;
     padding: 15px;
 }
-#canvas-container {
+#canvas-container
+{
     background: white;
     border: 1px solid #bbb;
 }
 
-#toolbox {
+#toolbox
+{
     margin-top: 15px;
     border: 1px solid #AAA;
     border-radius: 8px;
