A few tweaks before bed

--- a/TeamMeatProject/PorkPaint/styles/index.css
+++ b/TeamMeatProject/PorkPaint/styles/index.css
@@ -1,7 +1,7 @@
 ﻿body
 {
     padding-top: 5px;
-    background: url('/images/sandpaper.png');
+    background: url('/images/background-sandpaper.png');
 }
 #wrapper
 {
