--- a/TeamMeatProject/PorkPaint/styles/index.css
+++ b/TeamMeatProject/PorkPaint/styles/index.css
@@ -1,26 +1,27 @@
 ﻿body
 {
     padding-top: 5px;
-    background: url('/images/background-sandpaper.png');
+    background: url('/images/geometry2.png');
 }
 #wrapper
 {
     width: 780px;
     margin: 0 auto;
-    background: #EEE;
-    height: 600px;
+    background: url('/images/background-sandpaper.png');
+    height: 580px;
     border-radius: 8px;
     padding: 15px;
 }
 #canvas-container
 {
-    background: white;
+    background: #fff;
     border: 1px solid #bbb;
 }
 
 #toolbox
 {
-    margin-top: 15px;
+    margin-top: 20px;
     border: 1px solid #AAA;
     border-radius: 8px;
+    background: url('/images/paper.png');
 }
