Removing inner letters in controls
Replaced with paths

--- a/TeamMeatProject/PorkPaint/styles/index.css
+++ b/TeamMeatProject/PorkPaint/styles/index.css
@@ -55,7 +55,7 @@ path
     stroke-width:1px;
 }
 
-#removeControl + path
+#removeControl + path,  #dragAndDropControl + path, #tubeControl + path
 {
     fill: #000;
 }
